--- a/template/rm.html
+++ b/template/rm.html
@@ -4,6 +4,8 @@
 	<title>Diffusion Demo</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+
 </head>
 <body>
 <style type="text/css">
